<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.support.constraint.ConstraintLayout">

    <EditText
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:paddingEnd="82dp"
        android:paddingLeft="0dp"
        android:paddingRight="82dp"
        android:paddingStart="0dp"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/networkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:completionThreshold="1"
        android:dropDownAnchor="@id/card_view"
        android:dropDownHeight="wrap_content"
        android:dropDownWidth="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter"
        android:paddingBottom="4dp"
        android:paddingEnd="48dp"
        android:paddingLeft="0dp"
        android:paddingRight="48dp"
        android:paddingStart="0dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

</merge>
