<resources>
    <string name="app_name">Argus</string>
    <string name="new_video">Find or Enter Video</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="EmptyListText">Tap the button below\nto add a video.</string>
    <string name="EmptyListIconDescription">The empty list Argus app icon</string>

    <string name="nameDescription">Enter a title or name:</string>
    <string name="done">Done</string>
    <string name="networkDescription">Enter a network name:</string>
    <string name="searchDescription">Get a video description: title and network</string>
    <string name="searchName">Title</string>
    <string name="networkName">Network</string>
    <string name="season_label">S</string>
    <string name="one">1</string>
    <string name="episode_label">E</string>`
    <string-array name="networks">
        <item>ABC</item>
        <item>Amazon</item>
        <item>BritBox</item>
        <item>CBS</item>
        <item>Cinemax</item>
        <item>Crunchyroll</item>
        <item>Fox</item>
        <item>Google Play</item>
        <item>HBO Go</item>
        <item>HBO Now</item>
        <item>Hulu</item>
        <item>NBC</item>
        <item>Netflix</item>
        <item>PBS</item>
        <item>Showtime</item>
        <item>Sling</item>
        <item>Starz</item>
        <item>TBS</item>
        <item>The CW</item>
        <item>YouTube Red</item>
    </string-array>
    <string name="title_activity_billing">BillingActivity</string>
</resources>
